--- a/templates/interview.html
+++ b/templates/interview.html
@@ -179,7 +179,7 @@
             <div class="spinner-border text-primary" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-            <p class="mt-3">Analyzing your answer and preparing next question...</p>
+            <p class="mt-3">Processing and analyzing your answer...</p>
         </div>
     </div>
     
